--- a/container.config.json
+++ b/container.config.json
@@ -22,10 +22,10 @@
 	],
 	"envParams": {},                                
 	"customLogs": "stdout",                         
-	"dataBaseName":"springboot_demo",               
+	"dataBaseName":"class_schedule",
 	"executeSQLs":[
-		"CREATE DATABASE IF NOT EXISTS springboot_demo;",
-		"USE springboot_demo;",
+		"CREATE DATABASE IF NOT EXISTS class_schedule;",
+		"USE class_schedule;",
 		"CREATE TABLE IF NOT EXISTS `Counters` (`id` int(11) NOT NULL AUTO_INCREMENT, `count` int(11) NOT NULL DEFAULT 1, `createdAt` timestamp NOT NULL DEFAULT CURRENT_TIMESTAMP, `updatedAt` timestamp NOT NULL DEFAULT CURRENT_TIMESTAMP, PRIMARY KEY (`id`)) ENGINE = InnoDB DEFAULT CHARSET = utf8;"
 	]                                               
 }
